# sahidawa

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml  next.config.js  package-lock.json  package.json  supabase_functions.sql  supabase_schema.sql  vercel.json
api/: chat.py  health.py  requirements.txt  waitlist.py
app/: globals.css  page.tsx
backend/: alembic.ini  geocode_stores.py  geocode_stores_v2.py  index.py  migrate_to_supabase.py  pyproject.toml  requirements.txt  resume_drugs.py  resume_drugs_async.py  test_chatbot.py  test_sahikawa.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/routes/: chat.py  drugs.py  health.py  waitlist.py  webhook.py
backend/app/core/: config.py  database.py  search.py
backend/app/models/: __init__.py  drug.py  query_log.py  store.py
backend/app/schemas/: drug.py  whatsapp.py
backend/app/services/: cache.py  chatbot.py  supabase_client.py
backend/app/services/drug/: async_supabase_lookup.py  lookup.py  supabase_lookup.py
backend/app/services/geo/: store_locator.py
backend/app/services/llm/: parser.py  responder.py
backend/app/services/search/: drug_search.py
backend/app/services/whatsapp/: client.py
backend/app/utils/: geocoding.py  language.py
backend/data/processed/: nppa_matched.csv  salt_compositions.csv
backend/data/raw/: jan_aushadhi_stores.csv
backend/migrations/: 001_initial_schema.sql
backend/tests/: test_health.py  test_language.py
components/: Argument.tsx  CTASection.tsx  ChatDemo.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  PhonePreview.tsx  (+2 more)
(+20 files in other folders)
