[project]
name = "sahidawa-backend"
version = "0.1.0"
description = "Medicine price discovery and generic substitution platform for India"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "geoalchemy2>=0.15.0",
    # Redis
    "redis>=5.2.0",
    # Search
    "meilisearch>=0.31.0",
    # LLM
    "groq>=0.12.0",
    # WhatsApp / HTTP
    "httpx>=0.28.0",
    # Config
    "pydantic-settings>=2.6.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",  # for TestClient
    "factory-boy>=3.3.0",
]
data = [
    # For data pipeline / scraping
    "beautifulsoup4>=4.12.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "requests>=2.32.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
